--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travelme",
+  "name": "travelagency",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,20 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "date-fns": "^2.30.0",
-    "formik": "^2.4.2",
     "react": "^18.2.0",
-    "react-datepicker": "^4.16.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-phone-input-2": "^2.15.1",
-    "react-phone-number-input": "^3.3.0",
-    "react-router-dom": "^6.14.2",
-    "react-slick": "^0.29.0",
-    "react-swipeable": "^7.0.1",
-    "scrollreveal": "^4.0.9",
-    "slick-carousel": "^1.8.1",
-    "yup": "^1.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
