--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.14.2",
+    "scrollreveal": "^4.0.9",
     "yup": "^1.2.0"
   },
   "devDependencies": {
